--- a/resume10.html
+++ b/resume10.html
@@ -210,6 +210,41 @@
       </div>
     </div>
 
+    <!-- Cards -->
+
+    <div class="card-group">
+      <div class="card">
+        <img src="./Images/Html.png" class="card-img-top" alt="Html Logo">
+        <div class="card-body">
+          <h5 class="card-title"> Html </h5><br>
+          <p class="card-text">HTML (HyperText Markup Language) is the code that is used to structure a web page and its content</p>
+        </div>
+      </div>
+
+
+      <div class="card">
+        <img src="./Images/Css.png" class="card-img-top" alt="Css Logo">
+        <div class="card-body">
+          <h5 class="card-title"> Css </h5><br>
+          <p class="card-text">Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML.</p>
+        </div>
+      </div>
+
+      
+      <div class="card">
+        <img src="./Images/Js.png" class="card-img-top" alt="Javascript Logo">
+        <div class="card-body">
+          <h5 class="card-title"> Javascript </h5><br>
+          <p class="card-text">JavaScript is used to develop interactive web applications. JavaScript can power featured like interactive images, carousels, and forms.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- /Cards -->
+
+
+    <!-- Carousel -->
+
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -218,7 +253,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="./Images/html1.png" alt="First slide">
+          <img class="d-block w-100" src="./Images/Html.png" alt="First slide">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="./Images/Css.png" alt="Second slide">
@@ -236,6 +271,8 @@
         <span class="sr-only"></span>
       </a>
     </div>
+
+    <!-- /Carousel -->
 
   </main>
 
