--- a/resume10.html
+++ b/resume10.html
@@ -72,7 +72,7 @@
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-1 text-center">Naeem Witbooi</h1>
+        <h1 class="display-1 text-center">Naeem Witbooi</h1><br>
         <p class="lead text-center">An Aspiring Web and Software Developer, Ready to take on the world!</p>
       </div>
     </div>
