--- a/resume10.html
+++ b/resume10.html
@@ -68,14 +68,16 @@
 
     <!-- /Main Image -->
 
+
     <!-- Intro -->
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-1 text-center">Naeem Witbooi</h1><br>
-        <p class="lead text-center">An Aspiring Web and Software Developer, Ready to take on the world!</p>
+        <h1 class="display-1 text-center">Naeem Witbooi</h1><br><br>
+        <p class="lead text-center">An Aspiring Web and Software Developer. Goal driven individual, always looking for a challenge and to learn new skills.</p>
       </div>
     </div>
+
 
     <!-- Navigation Bar -->
 
@@ -107,6 +109,9 @@
         </div>
       </div>
     </nav>
+
+    <!-- /Navigation Bar -->
+
 
   </header>
 
@@ -297,6 +302,8 @@
       </button>
       <!-- /Button trigger modal -->
 
+      
+
     </form><br>
 
     <a href="https://www.linkedin.com/in/naeem-witbooi-52617118b/" target="_blank"><img class="icons"
@@ -317,6 +324,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+
+
+    <!-- Jquery -->
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
