--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <div class="text-center">
       <picture>
 
-        <source media="(min-width: 850px)" class="img-fluid" srcset="images/profilePictureWeistUp.jpeg">
+        <source media="(min-width: 850px)" srcset="images/profilePictureWeistUp.jpeg">
 
-        <source media="(min-width: 423px)" class="img-fluid" srcset="images/profilePictureShoulders.jpeg">
+        <source media="(min-width: 423px)" srcset="images/profilePictureShoulders.jpeg">
 
         <img id="image" class="img-fluid" srcset="images/profilePictureFace.jpeg">
 
