--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <source media="(min-width: 423px)" srcset="images/profilePictureShoulders.jpeg">
 
-        <img id="image" class="img-fluid" srcset="images/profilePictureFace.jpeg">
+        <img id="image" class="img-fluid" srcset="images/profilePictureFace.jpeg" alt="profileImage">
 
       </picture>
     </div>
@@ -73,8 +73,8 @@
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-1 text-center">Naeem Witbooi</h1><br><br>
-        <p class="lead text-center">An Aspiring Web and Software Developer. Goal driven individual, always looking for a challenge and to learn new skills.</p>
+        <h1 class="display-1">Naeem Witbooi</h1><br><br>
+        <p class="lead">An Aspiring Web and Software Developer. Goal driven individual, always looking for a challenge and to learn new skills.</p>
       </div>
     </div>
 
@@ -288,7 +288,10 @@
 
   <footer>
 
+    <!-- Form -->
+
     <form id="Contact">
+
       <label>Name and Surname:</label><br>
       <input type="nameAndSurname" name="" value=""> <br><br>
       <label>Email Adrress:</label><br>
@@ -302,9 +305,12 @@
       </button>
       <!-- /Button trigger modal -->
 
-      
-
     </form><br>
+
+    <!-- /Form -->
+
+
+    <!-- Social Media Icons -->
 
     <a href="https://www.linkedin.com/in/naeem-witbooi-52617118b/" target="_blank"><img class="icons"
         src="./Images/linkedinLogo.png" alt="Linkedin Icon"></a>
@@ -312,6 +318,8 @@
         alt="Facebook Icon"></a>
     <a href="https://github.com/Naeem-wq" target="_blank"><img class="icons" src="./Images/gitHubMark.png"
         alt="Github Icon"></a>
+
+   <!-- /Social Media Icons -->   
 
   </footer>
 
