Changed page title.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Page Title -->
 
-  <title>Resume With Bootstrap</title>
+  <title>Naeem's Digital Resume</title>
 
   <!-- Bootstrap CDN -->
 
