--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     <div class="card-group">
       <div class="card">
-        <img src="./Images/Html.png" class="card-img-top" alt="Html Logo">
+        <img src="./images/Html.png" class="card-img-top" alt="Html Logo">
         <div class="card-body">
           <h5 class="card-title"> Html </h5><br>
           <p class="card-text">HTML (HyperText Markup Language) is the code that is used to structure a web page and its content</p>
@@ -228,7 +228,7 @@
 
 
       <div class="card">
-        <img src="./Images/Css.png" class="card-img-top" alt="Css Logo">
+        <img src="./images/Css.png" class="card-img-top" alt="Css Logo">
         <div class="card-body">
           <h5 class="card-title"> Css </h5><br>
           <p class="card-text">Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML.</p>
@@ -237,7 +237,7 @@
 
       
       <div class="card">
-        <img src="./Images/Js.png" class="card-img-top" alt="Javascript Logo">
+        <img src="./images/Js.png" class="card-img-top" alt="Javascript Logo">
         <div class="card-body">
           <h5 class="card-title"> Javascript </h5><br>
           <p class="card-text">JavaScript is used to develop interactive web applications. JavaScript can power featured like interactive images, carousels, and forms.</p>
@@ -258,13 +258,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="./Images/Html.png" alt="First slide">
+          <img class="d-block w-100" src="./images/Html.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./Images/Css.png" alt="Second slide">
+          <img class="d-block w-100" src="./images/Css.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./Images/Js.png" alt="Third slide">
+          <img class="d-block w-100" src="./images/Js.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -313,10 +313,10 @@
     <!-- Social Media Icons -->
 
     <a href="https://www.linkedin.com/in/naeem-witbooi-52617118b/" target="_blank"><img class="icons"
-        src="./Images/linkedinLogo.png" alt="Linkedin Icon"></a>
-    <a href="https://www.facebook.com/Naeem.Witbooi4" target="_blank"><img class="icons" src="./Images/FacebookLogo.png"
+        src="./images/linkedinLogo.png" alt="Linkedin Icon"></a>
+    <a href="https://www.facebook.com/Naeem.Witbooi4" target="_blank"><img class="icons" src="./images/FacebookLogo.png"
         alt="Facebook Icon"></a>
-    <a href="https://github.com/Naeem-wq" target="_blank"><img class="icons" src="./Images/gitHubMark.png"
+    <a href="https://github.com/Naeem-wq" target="_blank"><img class="icons" src="./images/gitHubMark.png"
         alt="Github Icon"></a>
 
    <!-- /Social Media Icons -->   
