Formatted document and used camel casing

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 
 <body>
-  
+
   <!-- Modal -->
 
-  <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="ModalLabel">Warning!!!</h5>
+          <h5 class="modal-title" id="modalLabel">Warning!!!</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -74,7 +74,8 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-1">Naeem Witbooi</h1><br><br>
-        <p class="lead">An Aspiring Web and Software Developer. Goal driven individual, always looking for a challenge and to learn new skills.</p>
+        <p class="lead">An Aspiring Web and Software Developer. Goal driven individual, always looking for a challenge
+          and to learn new skills.</p>
       </div>
     </div>
 
@@ -91,19 +92,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="#Education">Education</a>
+              <a class="nav-link active text-white" aria-current="page" href="#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#Experience">Experience</a>
+              <a class="nav-link text-white" href="#experience">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#Interests">Interests</a>
+              <a class="nav-link text-white" href="#interests">Interests</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#Skills">Skills</a>
+              <a class="nav-link text-white" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#Contact">Contact</a>
+              <a class="nav-link text-white" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -126,7 +127,7 @@
       <div class="cols">
         <div class="col">
 
-          <div id="Education">
+          <div id="education">
 
             <h2>Education</h2>
             <h3>Intro into Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a>
@@ -155,7 +156,7 @@
 
         <div class="col">
 
-          <div id="Experience">
+          <div id="experience">
 
             <h2>Experience</h2>
 
@@ -178,7 +179,7 @@
 
         <div class="col">
 
-          <div id="Interests">
+          <div id="interests">
             <h3>Interests</h3><br>
 
             <p>Some of my Interests include:</p>
@@ -196,7 +197,7 @@
 
         <div class="col">
 
-          <div id="Skills">
+          <div id="skills">
 
             <h2>Skills</h2><br>
 
@@ -222,7 +223,8 @@
         <img src="./images/Html.png" class="card-img-top" alt="Html Logo">
         <div class="card-body">
           <h5 class="card-title"> Html </h5><br>
-          <p class="card-text">HTML (HyperText Markup Language) is the code that is used to structure a web page and its content</p>
+          <p class="card-text">HTML (HyperText Markup Language) is the code that is used to structure a web page and its
+            content</p>
         </div>
       </div>
 
@@ -231,16 +233,18 @@
         <img src="./images/Css.png" class="card-img-top" alt="Css Logo">
         <div class="card-body">
           <h5 class="card-title"> Css </h5><br>
-          <p class="card-text">Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML.</p>
+          <p class="card-text">Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation
+            of a document written in HTML.</p>
         </div>
       </div>
 
-      
+
       <div class="card">
         <img src="./images/Js.png" class="card-img-top" alt="Javascript Logo">
         <div class="card-body">
           <h5 class="card-title"> Javascript </h5><br>
-          <p class="card-text">JavaScript is used to develop interactive web applications. JavaScript can power featured like interactive images, carousels, and forms.</p>
+          <p class="card-text">JavaScript is used to develop interactive web applications. JavaScript can power featured
+            like interactive images, carousels, and forms.</p>
         </div>
       </div>
     </div>
@@ -290,7 +294,7 @@
 
     <!-- Form -->
 
-    <form id="Contact">
+    <form id="contact">
 
       <label>Name and Surname:</label><br>
       <input type="nameAndSurname" name="" value=""> <br><br>
@@ -319,7 +323,7 @@
     <a href="https://github.com/Naeem-wq" target="_blank"><img class="icons" src="./images/gitHubMark.png"
         alt="Github Icon"></a>
 
-   <!-- /Social Media Icons -->   
+    <!-- /Social Media Icons -->
 
   </footer>
 
@@ -334,7 +338,7 @@
     crossorigin="anonymous"></script>
 
 
-    <!-- Jquery -->
+  <!-- Jquery -->
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
