--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Modal -->
 
-  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
@@ -262,13 +262,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="./images/Html.png" alt="First slide">
+          <img class="d-block w-50" src="./images/Html.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./images/Css.png" alt="Second slide">
+          <img class="d-block w-50" src="./images/Css.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./images/Js.png" alt="Third slide">
+          <img class="d-block w-50" src="./images/Js.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -298,13 +298,13 @@
 
       <label>Name and Surname:</label><br>
       <input type="nameAndSurname" name="" value=""> <br><br>
-      <label>Email Adrress:</label><br>
+      <label>Email Address:</label><br>
       <input type="yourEmail" name="" value=""> <br><br>
       <label>About:</label> <br>
       <textarea name="yourMessage" rows="10" cols="30"></textarea> <br><br>
 
       <!-- Button trigger modal -->
-      <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#Modal">
+      <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modal">
         Submit
       </button>
       <!-- /Button trigger modal -->
