--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Page Title -->
 
-  <title>Naeem's Digital Resume</title>
+  <title>Naeem Witbooi - Digital Resume</title>
 
   <!-- Bootstrap CDN -->
 
@@ -129,7 +129,7 @@
 
           <div id="education">
 
-            <h2>Education</h2>
+            <h2>Certification</h2>
             <h3>Intro into Web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a>
             </h3>
 
@@ -140,7 +140,7 @@
             <li>I completed a 40 hour certificate in HTML & CSS</li><br>
 
 
-            <h3>Qualification 2</h3><br>
+            <h3>Formal Schooling</h3>
 
             <p>Institution : Phoenix Secondary</p>
 
